--- a/localisation/FRA_focus_l_english.yml
+++ b/localisation/FRA_focus_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
  
+ continental_system_name:0 "Continental System"
+ 
  FRA_experience_from_italy:0 "Experience From Italy"
  FRA_experience_from_italy_desc:0 "Our campaign in the Italian Peninsula was a success, but we must use that experience to improve our strategies."
  FRA_infantry_tactics:0 "Infantry Tactics"
@@ -93,6 +95,41 @@
  FRA_give_land:0 "Distribute Land"
  FRA_give_land_desc:0 "By distributing the land of the church and the aristocracy between the peasants, we will gain their loyalty and reduce the power of our enemies."
  
+ 
+ FRA_house_of_bonaparte:0 "House Of Bonaparte"
+ FRA_house_of_bonaparte_desc:0 "With Napoleon in power, the house of Bonaparte is now one of the most influent noble families in Europe and we must secure its position as such."
+ FRA_louis_i_hol:0 "Louis I Of Batavia"
+ FRA_louis_i_hol_desc:0 "Napoleon's brother will make a decent job administrating the Batavian Republic, one of the puppet states of France."
+ FRA_elisa_i_tus:0 "Elisa I Of Tuscany"
+ FRA_elisa_i_tus_desc:0 "Althought her sharp tongue has caused problems to his brother Napoleon, Elisa has become an influent woman in the European society and her marriage and title will secure the status of the family."
+ FRA_napoleon_i_ita:0 "Napoleon I Of Italy"
+ FRA_napoleon_i_ita_desc:0 "We must not forget that Napoleon's home was the Genoese island of Corsica. His father, Carlo Buonaparte, was an influent man in the peninsula and so will be his son."
+ FRA_joseph_i_nap:0 "Joseph I Of Naples"
+ FRA_joseph_i_nap_desc:0 "Joseph has served well as a diplomat of the Empire, he will recompensated with the Kingdom of Naples."
+ FRA_joseph_i_spr:0 "Joseph I Of Spain"
+ FRA_joseph_i_spr_desc:0 "Spain is in caos, and we were able to move the troops into the country because of the invasion of Portugal. We must take advantage of the situation and give the throne to a member of the family."
+ FRA_2nd_ita_camp:0 "Second Italian Campaign"
+ FRA_2nd_ita_camp_desc:0 "Now that the crisis of the coup is over, we must focus on the ongoing war and crush the coalition through Italy."
+ FRA_triumph_over_ita:0 "Triumph Over The Coalition"
+ FRA_triumph_over_ita_desc:0 "After 10 years of war, we are finally victorious. Vive la France!"
+ FRA_ulm_camp:0 "Ulm Campaign"
+ FRA_ulm_camp_desc:0 "To defeat the coalition we have to defeat Austria and HRE first. Let's begin the preparations of the campaign."
+ FRA_naples_camp:0 "Invasion Of Naples"
+ FRA_naples_camp_desc:0 "To secure the Italian Peninsula it's not enough with the North, we must also control the Kingdom of Naples in the South."
+ FRA_prussia_camp:0 "Prussian Campaign"
+ FRA_prussia_camp_desc:0 "The Prussians have become arrogant after winning the Seven Years War. The times of the Soldier King are gone, we will show them what a real army looks."
+ FRA_confederation_rhine:0 "Confederation Of The Rhine"
+ FRA_confederation_rhine_desc:0 "The HRE was a chaotic union of hundreds of duchies rather then an empire. We will simplificate it in a single confederation protected by the Emperor Napoleon Bonaparte."
+ FRA_arc_of_triumph:0 "L'Arc Triomphe"
+ FRA_arc_of_triumph_desc:0 "Our victory over the Austrians and Russians in Austerliz will be told for generations. We will build a monument to our victory just as big as the glory of France."
+ FRA_portugal_camp:0 "Invasion Of Portugal"
+ FRA_portugal_camp_desc:0 "The Portuguese are the dogs of the English, we must secure the Peninsula and get rid off the enemies of France."
+ FRA_russia_camp:0 "Invasion Of Russia"
+ FRA_russia_camp_desc:0 "The Russians think they can violate the terms of the Continental System and get away with it. The Russian Winter will melt before the fury of France."
+ FRA_napoleon_returns:0 "The Return Of Napoleon"
+ FRA_napoleon_returns_desc:0 "France has lost the battle, but France has not lost the war. The Emperor will return and guide France towards the glory!"
+ FRA_waterloo_camp:0 "Waterloo Campaign"
+ FRA_waterloo_camp_desc:0 "The Emperor has returned and so have our enemies. We will strike them in the Netherlands and send them back to their island."
  
  FRA_towards_second_republic:0 "Towards The Second Republic"
  FRA_towards_second_republic_desc:0 "The First Republic was weak and could just work under the terror. We need a new and stronger Republic, but who will be the leader?"
@@ -198,4 +235,3 @@
  FRA_rev_sov_desc:0 "The seed of the revolution has been planted, now it is time to make that spark become a fire."
  FRA_rev_knows_no_borders:0 "The Revolution Knows No Borders"
  FRA_rev_knows_no_borders_desc:0 "We have taken the revolution to Europe, now we must take it to the hole world!"
- 
