--- a/localisation/PRU_focus_l_english.yml
+++ b/localisation/PRU_focus_l_english.yml
@@ -1,21 +1,89 @@
 ﻿l_english:
 
+ PRU_state_affairs:0 "State Affairs"
+ PRU_state_affair_desc:0 "The situation in Europe is not the most stable one. It is urgent that we discuss both the political and military actions we will take in the future in order to preserve the position of the state of our nation."
+ PRU_military_budget:0 "Expand Military Budget"
+ PRU_military_budget_desc:0 "With the quick escalation in military conflicts, it is essential that we increase the pyblic spending destinated to the Prussian Army, even if it gives some temporal economic slow down."
+
  PRU_recruit_new_officers:0 "Recruit New Officers"
  PRU_recruit_new_officers_desc:0 "Our military stuff has roughly changed since the previous wars. Experienced generals need to be compensated with young and innovative officers."
  PRU_reform_bureocracy:0 "Reform Bureocracy"
  PRU_reform_bureocracy_desc:0 "The training and logistics of our army are being interrupted by a large and inneficient bureocracy that needs to be simplified."
- PRU_prussian_discipline:0 "Prussian Discipline"
- PRU_prussian_discipline_desc:0 "Where other states have anr army, the Prussian army has a state. The training and discipline of our military is well known and respected around all the world."
- PRU_prussian_dragoons:0 "Prussian Dragoons"
- PRU_prussian_dragoons_desc:0 "The disciplined charge of the Prussian cavalry generates fear even in the most brave enemy."
+ PRU_qual_inf:0 "Prussian Discipline"
+ PRU_qual_inf_desc:0 "Where other states have an army, the Prussian army has a state. The training and discipline of our military is well known and respected around all the world. We have 150% disciplin!"
+ PRU_quan_inf:0 "Prussian Militarism"
+ PRU_quan_inf_desc:0 "It is not enough having a professional army to defend the Fatherland, we need every able Prussian to enlist and fight for his country."
+ PRU_qual_cav:0 "Prussian Dragoons"
+ PRU_qual_cav_desc:0 "The disciplined charge of the Prussian cavalry generates fear even in the most brave enemy."
+ PRU_quan_cav:0 "Expanded Mobile Batallions"
+ PRU_quan_cav_desc:0 "A better mobilisation and transport of the troops is vital to achieve a numerical superiority."
+ PRU_qual_guns:0 "Quality Weapons"
+ PRU_qual_guns_desc:0 "We need to have the best and more reliable weapons, no matter the price."
+ PRU_quan_guns:0 "Cheap Weapons"
+ PRU_quan_guns_desc:0 "Technology is not of vital importance in war. We must ensure that every soldier has a weapon, even if it is not the best."
+ PRU_qual_art:0 "Quality Artillery"
+ PRU_qual_art_desc:0 "We need our artillery to have higher range and firepower."
+ PRU_quan_art:0 "Cheap Artillery"
+ PRU_quan_art_desc:0 "More efficient methods of production of artillery will help us to produce more batteries of these."
  
  PRU_supremacy_over_the_baltic:0 "Supremacy Over The Baltic"
- PRU_secure_the_baltic_desc:0 "If we want to be a superpower one day we need to control our sea."
+ PRU_supremacy_over_the_baltic_desc:0 "If we want to be a superpower one day we need to control our sea."
  PRU_conquer_hamburg:0 "Conquer Hamburg"
  PRU_conquer_hamburg_desc:0 "The Danish control land that is rightfully German. We shall reconquest Hamburg, Germany to the Germans!"
  PRU_conquer_sweden:0 "Push Back Sweden"
  PRU_conquer_sweden_desc:0 "The Swedish compete against us for the supremacy of the Baltic. They will know their place."
  
- PRU_crush_austria:0 "Crush Austria"
- PRU_crush_austria_desc:0 "We may be similar to the Austrians, but they will never tolerate a unified Germany, they must be crushed!"
+ PRU_napoleonic_warfare:0 "Napoleonic Warfare"
+ PRU_napoleonic_warfare_desc:0 "The Tactics and Strategy of Napoleon Bonaparte are marvelous. We will incorporate their ways to our own army."
+ PRU_embargo_britain:0 "Embargo Britain"
+ PRU_embargo_britain_desc:0 "We will help France with the continental system by ending our trade relations with Britain."
+ 
+ PRU_sphere_of_influence:0 "German Sphere Of Influence"
+ PRU_sphere_of_influence_desc:0 "In order to unify Germany, we have to be the predominant power in Central Europe and create a sphere of influence with the other german states."
+ PRU_influence_saxony:0 "Influence Saxony"
+ PRU_influence_saxony_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_hannover:0 "Influence Saxony"
+ PRU_influence_hannover_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_cologne:0 "Influence Saxony"
+ PRU_influence_cologne_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_hesse:0 "Influence Saxony"
+ PRU_influence_hesse_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_wurttemberg:0 "Influence Saxony"
+ PRU_influence_wurttemberg_desc:0 "Saxony will be incorporated in our sphere of influence."
+ PRU_influence_bavaria:0 "Influence Saxony"
+ PRU_influence_bavaria_desc:0 "Saxony will be incorporated in our sphere of influence."
+ 
+ PRU_german_confederation:0 "German Confederation"
+ PRU_german_confederation_desc:0 "Separated, we are weak. We must create a confederation of German states united for protection and defence."
+ 
+ PRU_unite_by_the_force:0 "Unite By The Force"
+ PRU_unite_by_the_force_desc:0 "European powers oppose the unification of Germany because they know our potential as a military and  economic superpower. They will not tolerate a peaceful unification, therefore we must prepare to do whatever is necessary to get rid of their control and expand."
+ PRU_invade_sax:0 "Invade Saxony"
+ PRU_invade_sax_desc:0 "Saxony is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_gne:0 "Invade Cologne"
+ PRU_invade_gne_desc:0 "Cologne is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_bav:0 "Invade Bavaria"
+ PRU_invade_bav_desc:0 "Bavaria is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_wur:0 "Invade Wurttemberg"
+ PRU_invade_wur_desc:0 "Wurttemberg is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_hes:0 "Invade Hesse"
+ PRU_invade_hes_desc:0 "Hesse is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_han:0 "Invade Hannover"
+ PRU_invade_han_desc:0 "Hannover is a vital state for the unification of Germany, we must unite whether they like it or not."
+ PRU_invade_aus:0 "Crush Austria"
+ PRU_invade_aus_desc:0 "We may be similar to the Austrians, but they will never tolerate a unified Germany, they must be crushed!"
+ 
+ PRU_german_empire:0 "German Empire"
+ PRU_german_empire_desc:0 "Now that there are no more other states in Germany that can rival us, we can finally proclaim our great German Empire."
+ 
+ PRU_imperial_economy:0 "Imperial Economy"
+ PRU_imperial_economy_desc:0 "One of the benefits of being part of the HRE is that we have better economic relations and trade influence between the other members."
+ PRU_imperial_army:0 "Imperial Army"
+ PRU_imperial_army_desc:0 "We are now fighting side by side with all the HRE. The Union makes the strength!"
+ PRU_imperial_diplomacy:0 "Imperial Diplomacy"
+ PRU_imperial_diplomacy_desc:0 "Being part of a bigger entity allows us to strengthen our diplomatic relations between the HRE and help us expand our influence as a whole."
+ PRU_loyalty_for_land:0 "Loyalty For Concessions"
+ PRU_loyalty_for_land_desc:0 "The Austrians want us to be their subject, but they must now that our independence has a price."
+ 
+ 
  
