--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -1,4 +1,16 @@
 ﻿l_english:
+ RHI_fascism:0 "Confederation Of The Rhine"
+ RHI_fascism_DEF:0 "The Confederation Of The Rhine"
+ RHI_fascism_ADJ:0 "Confederate"
+ RHI_neutrality:0 "Confederation Of The Rhine"
+ RHI_neutrality_DEF:0 "The Confederation Of The Rhine"
+ RHI_neutrality_ADJ:0 "Confederate"
+ RHI_democratic:0 "Confederation Of The Rhine"
+ RHI_democratic_DEF:0 "The Confederation Of The Rhine"
+ RHI_democratic_ADJ:0 "Confederate"
+ RHI_communism:0 "Confederation Of The Rhine"
+ RHI_communism_DEF:0 "The Confederation Of The Rhine"
+ RHI_communism_ADJ:0 "Confederate"
  GER_fascism:0 "Prussia"
  GER_fascism_DEF:0 "Prussia"
  GER_democratic:0 "Germany"
