naval tech interface/gfx

--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -6,14 +6,14 @@
  light_cruiser_desc:0 "A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships."
  heavy_cruiser:0 "Heavy Cruiser"
  heavy_cruiser_desc:0 "A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
- destroyer:0 "Destroyer"
- destroyer_desc:0 "The lightest screening vessel. Its job is to defend larger ships and to find and destroy submarines."
+ destroyer:0 "4th Rate"
+ destroyer_desc:0 ""
  carrier:0 "Carrier"
  carrier_desc:0 "A capital ship able to carry wings of powerful carrier capable aircraft into battle. Also useful as a floating airfield you can position off the coast of your enemy."
  battleship:0 "Battleship"
  battleship_desc:0 "The largest capital ship with the biggest guns and strongest armor that money can buy. Such an expensive investment deserves proper support of smaller screening ships."
- battle_cruiser:0 "Battlecruiser"
- battle_cruiser_desc:0 "A large capital ship often with offensive abilities close to those of a battleship, but with weaker armor traded for a faster speed."
+ battle_cruiser:0 "1st Rate"
+ battle_cruiser_desc:0 ""
  convoy:0 "Convoy"
  convoy_desc:0 "Convoys used for international trade of goods and resources. Also used to ferry troops around and for performing naval invasions."
  sh_battleship:0 "Superheavy Battleship"
