--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -21,7 +21,7 @@
  LOADING_TIP_19:0 "There are two levers for moving men — interest and fear.\n- Napoleon Bonaparte"
  LOADING_TIP_20:0 "Impossible is a word only to be found in the dictionary of fools.\n- Napoleon Bonaparte"
  LOADING_TIP_21:0 "When soldiers have been baptized in the fire of a battle-field, they have all one rank in my eyes.\n- Napoleon Bonaparte"
- LOADING_TIP_22:0 "Medicine is a collection of uncertain prescriptions, the results of which, taken collectively, are more fatal than useful to mankind.\n- Napoleon Bonaparte"
+ LOADING_TIP_22:0 "Put your iron hand in a velvet glove.\n- Napoleon Bonaparte"
  LOADING_TIP_23:0 "Let the path be open to talent.\n- Napoleon Bonaparte"
  LOADING_TIP_24:0 "Courage is like love; it must have hope to nourish it.\n- Napoleon Bonaparte"
  LOADING_TIP_25:0 "There are only two forces in the world, the sword and the spirit. In the long run the sword will always be conquered by the spirit.\n- Napoleon Bonaparte"
@@ -39,4 +39,63 @@
  LOADING_TIP_37:0 "Doctors will have more lives to answer for in the next world than even we generals.\n- Napoleon Bonaparte"
  LOADING_TIP_38:0 "The most dangerous moment comes with victory.\n- Napoleon Bonaparte"
  LOADING_TIP_39:0 "In politics… never retreat, never retract… never admit a mistake.\n- Napoleon Bonaparte"
- 
+ LOADING_TIP_40:0 "Bunnies are heartless creatures"
+ LOADING_TIP_41:0 "There is no thing such as accident. It is fate misnamed.\n- Napoleon Bonaparte"
+ LOADING_TIP_42:0 "The battlefield is a scene of constant chaos. The winner will be the one who controls that chaos, both his own and the enemies.\n- Napoleon Bonaparte"
+ LOADING_TIP_43:0 "Take time to deliberate, but when the time for action has arrived, stop thinking and go in.\n- Napoleon Bonaparte"
+ LOADING_TIP_44:0 "The truest wisdom is a resolute determination.\n- Napoleon Bonaparte"
+ LOADING_TIP_45:0 "I am sometimes a fox and sometimes a lion. The whole secret of government lies in knowing when to be the one or the other.\n- Napoleon Bonaparte"
+ LOADING_TIP_46:0 "Power is my mistress. I have worked too hard at her conquest to allow anyone to take her away from me.\n- Napoleon Bonaparte"
+ LOADING_TIP_47:0 "One should never forbid what one lacks the power to prevent.\n- Napoleon Bonaparte"
+ LOADING_TIP_48:0 "The best way to keep one's word is not to give it.\n- Napoleon Bonaparte"
+ LOADING_TIP_49:0 "A revolution is an idea which has found its bayonets.\n- Napoleon Bonaparte"
+ LOADING_TIP_50:0 "To do all that one is able to do, is to be a man; to do all that one would like to do, is to be a god.\n- Napoleon Bonaparte"
+ LOADING_TIP_51:0 "War is the business of barbarians.\n- Napoleon Bonaparte"
+ LOADING_TIP_52:0 "England is a nation of shopkeepers.\n- Napoleon Bonaparte"
+ LOADING_TIP_53:0 "The army is the true nobility of our country.\n- Napoleon Bonaparte"
+ LOADING_TIP_54:0 "All religions have been made by men.\n- Napoleon Bonaparte"
+ LOADING_TIP_55:0 "The great proof of madness is the disproportion of one's designs to one's means.\n- Napoleon Bonaparte"
+ LOADING_TIP_56:0 "Show me a family of readers, and I will show you the people who move the world.\n- Napoleon Bonaparte"
+ LOADING_TIP_57:0 "History is a set of lies agreed upon.\n- Napoleon Bonaparte"
+ LOADING_TIP_58:0 "History is written by the winners.\n- Napoleon Bonaparte"
+ LOADING_TIP_59:0 "Alexander, Caesar, Charlemagne, and I have founded empires. But on what did we rest the creations of our genius? Upon force. Jesus Christ founded his empire upon love; and at this hour millions of men would die for him.\n- Napoleon Bonaparte"
+ LOADING_TIP_60:0 "A woman laughing is a woman conquered.\n- Napoleon Bonaparte"
+ LOADING_TIP_61:0 "You don't reason with intellectuals. You shoot them.\n- Napoleon Bonaparte"
+ LOADING_TIP_62:0 "China is a sleeping giant; let him sleep, for if he wakes, he will shake the World.\n- Napoleon Bonaparte"
+ LOADING_TIP_63:0 "The world suffers a lot. Not because the violence of bad people. But because of the silence of the good people.\n- Napoleon Bonaparte"
+ LOADING_TIP_64:0 "The reason most people fail instead of succeed is they trade what they want most for what they want at the moment.\n- Napoleon Bonaparte"
+ LOADING_TIP_65:0 "A picture is worth a thousand words.\n- Napoleon Bonaparte"
+ LOADING_TIP_66:0 "Money has no fatherland, financiers are without patriotism and without decency, their sole object is gain.\n- Napoleon Bonaparte"
+ LOADING_TIP_67:0 "Never tell your enemy he is doing the wrong thing.\n- Napoleon Bonaparte"
+ LOADING_TIP_68:0 "Great men are meteors designed to burn so that earth may be lighted.\n- Napoleon Bonaparte"
+ LOADING_TIP_69:0 "It's the unconquerable soul of man, and not the nature of the weapon he uses, that ensures victory.\n- Napoleon Bonaparte"
+ LOADING_TIP_70:0 "I saw the crown of France laying on the ground, so I picked it up with my sword.\n- Napoleon Bonaparte"
+ LOADING_TIP_71:0 "There is a joy in danger.\n- Napoleon Bonaparte"
+ LOADING_TIP_72:0 "An army marches on its stomach.\n- Napoleon Bonaparte"
+ LOADING_TIP_73:0 "Nothing is lost as long as courage remains.\n- Napoleon Bonaparte"
+ LOADING_TIP_74:0 "I have made all the calculations. Fate will do the rest.\n- Napoleon Bonaparte"
+ LOADING_TIP_75:0 "From triumph to downfall there is but one step.\n- Napoleon Bonaparte"
+ LOADING_TIP_76:0 "The laws of circumstance are abolished by new circumstances.\n- Napoleon Bonaparte"
+ LOADING_TIP_77:0 "As a rule it is circumstances that make men.\n- Napoleon Bonaparte"
+ LOADING_TIP_78:0 "Of all the peoples of Europe, Spaniards disgust me the least.\n- Napoleon Bonaparte"
+ LOADING_TIP_79:0 "There shall be no Alps.\n- Napoleon Bonaparte"
+ LOADING_TIP_80:0 "Greatness is nothing unless it be lasting.\n- Napoleon Bonaparte"
+ LOADING_TIP_81:0 "The most difficult art is not in the choice of men, but in giving to the men chosen the highest service of which they are capable.\n- Napoleon Bonaparte"
+ LOADING_TIP_82:0 "I have seen in the most significant of circumstances, that some little thing always decides great events.\n- Napoleon Bonaparte"
+ LOADING_TIP_83:0 "It is astonishing what power words have over men.\n- Napoleon Bonaparte"
+ LOADING_TIP_84:0 "Champagne. In victory one deserves it, in defeat one needs it.\n- Napoleon Bonaparte"
+ LOADING_TIP_85:0 "Until you spread your wings, you'll have no idea how far you can fly.\n- Napoleon Bonaparte"
+ LOADING_TIP_86:0 "I can afford losing a battle, but I can't afford losing a minute.\n- Napoleon Bonaparte"
+ LOADING_TIP_87:0 "Napoleon's presence on the field makes the difference of forty thousand men.\n- Duke Of Wellington"
+ LOADING_TIP_88:0 "There is nothing better than an onion for marching on the road to glory.\n- Napoleon Bonaparte"
+ LOADING_TIP_89:0 "This music will save us a lot of cannons.\n- Napoleon Bonaparte (About La Marseillaise)"
+ LOADING_TIP_90:0 "So he is no more than a common mortal! Now he, too, will tread underfoot all the rights of man and indulge only his ambition. Now he will think himself superior to all men and become a tyrant!.\n -Ludwig van Beethoven (After hearing Napoleon had crowned himself emperor)"
+ LOADING_TIP_91:0 "Let's end this war with a thunderclap.\n- Napoleon Bonaparte (Before the Batlle Of Austerlitz)"
+ LOADING_TIP_92:0 "Hats off gentlemen, if he were alive we wouldn’t be here today.\n- Napoleon Bonaparte (Visiting the grave of Frederick the Great)"
+ LOADING_TIP_93:0 "What a terrible sight! They're burning it themselves… What resolution! What people! These are Scythians!\n- Napoleon Bonaparte (Observing Moscow's fire)"
+ LOADING_TIP_94:0 "It would be a mistake to suppose that it is enough to exhibit our troops to subdue Spain.\n- Napoleon Bonaparte (To Murat)"
+ LOADING_TIP_95:0 "I may lose my throne, but under its ruins I will bring down the whole world!\n- Napoleon Bonaparte, 1813"
+ LOADING_TIP_96:0 "On the one hand, a conqueror who travels the world sowing pillage and destruction everywhere. On the other hand, a pirate who spreads misery and ruin in the seas.\n- Thomas Jefferson"
+ LOADING_TIP_97:0 "The hardest thing of all for a soldier is to retreat.\n- Duke of Wellington"
+ LOADING_TIP_98:0 "England expects that every man will do his duty.\n- Horatio Nelson"
+ LOADING_TIP_99:0 "You must not fear death, my lads. Defy him, and you drive him into the enemy's ranks.\n- Napoleon Bonaparte"
