--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -33,6 +33,7 @@
  rexism:0 "Absolute Monarchy"
  rexism_desc:0 "An Absolute monarchy, or despotic monarchy, is a form of monarchy in which one ruler has supreme authority and where that authority is not restricted by any written laws, legislature, or customs."
  neutrality:0 "Monarchy"
+ neutrality_noun:0 "Monarchist"
  neutrality_desc:0 "Monarchist Regime"
  despotism:0 "Feudal Monarchy"
  despotism_desc:0 "Feudalism was a combination of legal and military customs in medieval Europe that flourished between the 9th and 15th centuries. Broadly defined, it was a way of structuring society around relationships derived from the holding of land in exchange for service or labour."
@@ -50,10 +51,14 @@
  ENG_neutrality_party_long:0 "House Of Hannover"
  ENG_neutrality_party:0 "Von Hannover"
  ENG_neutrality_party_long:0 "House Of Hannover"
- FRA_neutrality_party:0 "Bonaparte Dynasty"
- FRA_neutrality_party_long:0 "House Of Bonaparte"
- FRA_communism_party:0 "Consulat"
- FRA_communism_party_long:0 "Consulat français"
+ FRA_democratic_party:0 "Constitutionalists"
+ FRA_democratic_party_long:0 "Constitutionalists"
+ FRA_neutrality_party:0 "Orléans"
+ FRA_neutrality_party_long:0 "House Of Orléans"
+ FRA_fascism_party:0 "Consulat"
+ FRA_fascism_party_long:0 "Consulat français"
+ FRA_communism_party:0 "La Montagne"
+ FRA_communism_party_long:0 "La Montagne"
  TUR_neutrality_party:0 "Osmanoğlu Dynasty"
  TUR_neutrality_party_long:0 "House Of Osman"
  SPR_neutrality_party:0 "Osmanoğlu Dynasty"
@@ -62,3 +67,9 @@
  PER_neutrality_party_long:0 "House Of Qajar"
  RUS_neutrality_party:0 "Bourbon Dynasty"
  RUS_neutrality_party_long:0 "House of Bourbon"
+ USA_democratic_party:0 "Federalist Party"
+ USA_democratic_party_long:0 "Federalist Party"
+ USA_democratic_republican_party:0 "Republican-Democratic Party"
+ USA_democratic_republican_party_long:0 "Republican-Democratic Party"
+ USA_federalist_party:0 "Federalist Party"
+ USA_federalist_party_long:0 "Federalist Party"
