--- a/localisation/traits_l_english.yml
+++ b/localisation/traits_l_english.yml
@@ -1,4 +1,11 @@
 ﻿l_english:
+ federalist:0 "Federalist"
+ republican:0 "Republican"
+ founding_father:0 "Founding Father"
+ institutions_promoter:0 "Institutions Promoter"
+ ridiculed_monarch:0 "Ridiculed Monarch"
+ emperor_brazil:0 "First Emperor Of Brazil"
+ time_traveller:0 "Time Traveller"
  whig:0 "Whig"
  tory:0 "Tory"
  mad_king:0 "Mad King"
