--- a/localisation/countries_cosmetic_l_english.yml
+++ b/localisation/countries_cosmetic_l_english.yml
@@ -1,4 +1,17 @@
 ﻿l_english:
+ LUS_democratic:0 "Luso-Brazilian Republic"
+ LUS_democratic_DEF:0 "The Luso-Brazilian Republic"
+ LUS_democratic_ADJ:0 "Lusitanian"
+ LUS_communism:0 "Luso-Brazilian Republic"
+ LUS_communism_DEF:0 "The Luso-Brazilian Republic"
+ LUS_communism_ADJ:0 "Lusitanian"
+ LUS_neutrality:0 "Luso-Brazilian Empire"
+ LUS_neutrality_DEF:0 "The Luso-Brazilian Empire"
+ LUS_neutrality_ADJ:0 "Lusitanian"
+ LUS_fascism:0 "Luso-Brazilian Empire"
+ LUS_fascism_DEF:0 "The Luso-Brazilian Empire"
+ LUS_fascism_ADJ:0 "Lusitanian"
+ LUS_democratic:0 "Luso-Brazilian Republic"
  NGC_democratic:0 "German Republic"
  NGC_democratic_DEF:0 "The German Republic"
  NGC_democratic_ADJ:0 "German"
@@ -47,9 +60,9 @@
  MAL_UK_democratic_DEF:0 "British Malaya"
  RAJ_UK_democratic:0 "British Raj"
  RAJ_UK_democratic_DEF:0 "the British Raj"
- RAJ_UK_neutrality:0 "British Raj"
- RAJ_UK_neutrality_DEF:0 "the British Raj"
- RAJ_UK_subject:0 "$OVERLORDADJ$ Raj"
+ RAJ_UK_neutrality:0 "East India Company"
+ RAJ_UK_neutrality_DEF:0 "The East India Company"
+ RAJ_UK_subject:0 "$OVERLORDADJ$ East India Company"
  RAJ_UK_autonomy_dominion:0 "Dominion of India"
  RAJ_UK_autonomy_dominion_DEF:0 "the Dominion of India"
  SAF_COM_communist:0 "Cape Commune"
@@ -656,29 +669,29 @@
  MEX_cristero_communism:1 "Mexican Socialist Republic"
  MEX_cristero_communism_DEF:1 "the Mexican Socialist Republic"
  MEX_cristero_communism_ADJ:0 "Mexican"
- MEX_SPR_fascism_subject:0 "New Spain"
- MEX_SPR_fascism_subject_DEF:0 "New Spain"
+ MEX_SPR_fascism_subject:0 "Viceroyalty Of New Spain"
+ MEX_SPR_fascism_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_SPR_fascism_subject_ADJ:0 "New Spanish"
- MEX_SPR_neutrality_subject:0 "New Spain"
- MEX_SPR_neutrality_subject_DEF:0 "New Spain"
+ MEX_SPR_neutrality_subject:0 "Viceroyalty Of New Spain"
+ MEX_SPR_neutrality_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_SPR_neutrality_subject_ADJ:0 "New Spanish"
- MEX_cristero_SPR_fascism_subject:0 "New Spain"
- MEX_cristero_SPR_fascism_subject_DEF:0 "New Spain"
+ MEX_cristero_SPR_fascism_subject:0 "Viceroyalty Of New Spain"
+ MEX_cristero_SPR_fascism_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_cristero_SPR_fascism_subject_ADJ:0 "New Spanish"
- MEX_cristero_SPR_neutrality_subject:0 "New Spain"
- MEX_cristero_SPR_neutrality_subject_DEF:0 "New Spain"
+ MEX_cristero_SPR_neutrality_subject:0 "Viceroyalty Of New Spain"
+ MEX_cristero_SPR_neutrality_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_cristero_SPR_neutrality_subject_ADJ:0 "New Spanish"
- MEX_SPA_fascism_subject:0 "New Spain"
- MEX_SPA_fascism_subject_DEF:0 "New Spain"
+ MEX_SPA_fascism_subject:0 "Viceroyalty Of New Spain"
+ MEX_SPA_fascism_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_SPA_fascism_subject_ADJ:0 "New Spanish"
- MEX_SPA_neutrality_subject:0 "New Spain"
- MEX_SPA_neutrality_subject_DEF:0 "New Spain"
+ MEX_SPA_neutrality_subject:0 "Viceroyalty Of New Spain"
+ MEX_SPA_neutrality_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_SPA_neutrality_subject_ADJ:0 "New Spanish"
- MEX_cristero_SPA_fascism_subject:0 "New Spain"
- MEX_cristero_SPA_fascism_subject_DEF:0 "New Spain"
+ MEX_cristero_SPA_fascism_subject:0 "Viceroyalty Of New Spain"
+ MEX_cristero_SPA_fascism_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_cristero_SPA_fascism_subject_ADJ:0 "New Spanish"
- MEX_cristero_SPA_neutrality_subject:0 "New Spain"
- MEX_cristero_SPA_neutrality_subject_DEF:0 "New Spain"
+ MEX_cristero_SPA_neutrality_subject:0 "Viceroyalty Of New Spain"
+ MEX_cristero_SPA_neutrality_subject_DEF:0 "Viceroyalty Of New Spain"
  MEX_cristero_SPA_neutrality_subject_ADJ:0 "New Spanish"
  ENG_imperial_federation_unified_fascism:0 "The Empire"
  ENG_imperial_federation_unified_communism:0 "Commonwealth of Peoples"
