--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -383,18 +383,18 @@
  AFG_democratic_ADJ:0 "Afghan"
  AFG_neutrality_ADJ:0 "Afghan"
  AFG_communism_ADJ:0 "Afghan"
- ARG_fascism:0 "Argentine League"
- ARG_fascism_DEF:0 "The Argentine League"
- ARG_democratic:0 "Argentine Republic"
- ARG_democratic_DEF:0 "The Argentine Republic"
- ARG_neutrality:0 "Argentina"
- ARG_neutrality_DEF:0 "Argentina"
- ARG_communism:0 "Argentina Populares"
- ARG_communism_DEF:0 "Argentina Populares"
- ARG_fascism_ADJ:0 "Argentinean"
- ARG_democratic_ADJ:0 "Argentinean"
- ARG_neutrality_ADJ:0 "Argentinean"
- ARG_communism_ADJ:0 "Argentinean"
+ ARG_fascism:0 "Confederation Of The Río De La Plata"
+ ARG_fascism_DEF:0 "The Confederation Of The Río De La Plata"
+ ARG_democratic:0 "United Provinces Of The Río De La Plata"
+ ARG_democratic_DEF:0 "The United Provinces Of The Río De La Plata"
+ ARG_neutrality:0 "Viceroyalty Of The Río De La Plata"
+ ARG_neutrality_DEF:0 "The Viceroyalty Of The Río De La Plata"
+ ARG_communism:0 "Republic Of The Río De La Plata"
+ ARG_communism_DEF:0 "The Republic Of The Río De La Plata"
+ ARG_fascism_ADJ:0 "Platinean"
+ ARG_democratic_ADJ:0 "Platinean"
+ ARG_neutrality_ADJ:0 "Platinean"
+ ARG_communism_ADJ:0 "Platinean"
  BOL_fascism:0 "Falangist Bolivia"
  BOL_fascism_DEF:0 "Falangist Bolivia"
  BOL_democratic:0 "Plurinational Bolivia"
@@ -407,14 +407,14 @@
  BOL_democratic_ADJ:0 "Bolivian"
  BOL_neutrality_ADJ:0 "Bolivian"
  BOL_communism_ADJ:0 "Bolivian"
- BRA_fascism:0 "Integralist Brazil"
- BRA_fascism_DEF:0 "Integralist Brazil"
- BRA_democratic:0 "Second Brazilian Republic"
- BRA_democratic_DEF:0 "The Second Brazilian Republic"
+ BRA_fascism:0 "Empire Of Brazil"
+ BRA_fascism_DEF:0 "The Empire Of Brazil"
+ BRA_democratic:0 "United States Of Brazil"
+ BRA_democratic_DEF:0 "The United States Of Brazil"
  BRA_neutrality:0 "Brazil"
  BRA_neutrality_DEF:0 "Brazil"
- BRA_communism:0 "Brazilian Socialist Republic"
- BRA_communism_DEF:0 "The Brazilian Socialist Republic"
+ BRA_communism:0 "Revolutionary Brazilian Republic"
+ BRA_communism_DEF:0 "The Revolutionary Brazilian Republic"
  BRA_fascism_ADJ:0 "Brazilian"
  BRA_democratic_ADJ:0 "Brazilian"
  BRA_neutrality_ADJ:0 "Brazilian"
@@ -423,8 +423,8 @@
  CAN_fascism_DEF:0 "Unitary Canada"
  CAN_democratic:0 "Canada"
  CAN_democratic_DEF:0 "Canada"
- CAN_neutrality:0 "Free Canadian Republic"
- CAN_neutrality_DEF:0 "The Free Canadian Republic"
+ CAN_neutrality:0 "British Canada"
+ CAN_neutrality_DEF:0 "British Canada"
  CAN_communism:0 "Canada Popular State"
  CAN_communism_DEF:0 "The Canada Popular State"
  CAN_fascism_ADJ:0 "Canadian"
@@ -467,17 +467,17 @@
  CHL_democratic_ADJ:0 "Chilean"
  CHL_neutrality_ADJ:0 "Chilean"
  CHL_communism_ADJ:0 "Chilean"
- COL_fascism:0 "Nueva Gran Colombia"
- COL_fascism_DEF:0 "Nueva Gran Colombia"
- COL_democratic:0 "Colombia"
- COL_democratic_DEF:0 "Colombia"
- COL_neutrality:0 "Nueva Constitución"
- COL_neutrality_DEF:0 "Nueva Constitución"
- COL_communism:0 "Colombian Socialist Republic"
- COL_communism_DEF:0 "The Colombian Socialist Republic"
+ COL_fascism:0 "Gran Colombia"
+ COL_fascism_DEF:0 "Gran Colombia"
+ COL_democratic:0 "Gran Colombia"
+ COL_democratic_DEF:0 "Gran Colombia"
+ COL_neutrality:0 "Viceroyalty Of Nueva Granada"
+ COL_neutrality_DEF:0 "The Viceroyalty Of Nueva Granada"
+ COL_communism:0 "Colombian Republic"
+ COL_communism_DEF:0 "The Colombian Republic"
  COL_fascism_ADJ:0 "Colombian"
  COL_democratic_ADJ:0 "Colombian"
- COL_neutrality_ADJ:0 "Colombian"
+ COL_neutrality_ADJ:0 "Granadian"
  COL_communism_ADJ:0 "Colombian"
  COS_fascism:0 "Costa Potente"
  COS_fascism_DEF:0 "Costa Potente"
@@ -563,14 +563,14 @@
  JAP_democratic_ADJ:0 "Japanese"
  JAP_neutrality_ADJ:0 "Japanese"
  JAP_communism_ADJ:0 "Japanese"
- MEX_fascism:0 "Synarchist Mexico"
- MEX_fascism_DEF:0 "Synarchist Mexico"
- MEX_democratic:0 "Mexican Opposition"
- MEX_democratic_DEF:0 "The Mexican Opposition"
- MEX_neutrality:0 "Mexico"
- MEX_neutrality_DEF:0 "Mexico"
- MEX_communism:0 "Mexican Socialist Republic"
- MEX_communism_DEF:0 "The Mexican Socialist Republic"
+ MEX_fascism:0 "Mexican Empire"
+ MEX_fascism_DEF:0 "The Mexican Empire"
+ MEX_democratic:0 "Mexican Republic"
+ MEX_democratic_DEF:0 "The Mexican Republic"
+ MEX_neutrality:0 "Viceroyalty Of New Spain"
+ MEX_neutrality_DEF:0 "The Viceroyalty Of New Spain"
+ MEX_communism:0 "Mexican Republic"
+ MEX_communism_DEF:0 "The Mexican Republic"
  MEX_fascism_ADJ:0 "Mexican"
  MEX_democratic_ADJ:0 "Mexican"
  MEX_neutrality_ADJ:0 "Mexican"
@@ -663,8 +663,8 @@
  PRU_fascism_DEF:0 "Peru"
  PRU_democratic:0 "Republic of Peru"
  PRU_democratic_DEF:0 "The Republic of Peru"
- PRU_neutrality:0 "Peruvian Independent State"
- PRU_neutrality_DEF:0 "The Peruvian Independent State"
+ PRU_neutrality:0 "Viceroyalty Of Peru"
+ PRU_neutrality_DEF:0 "The Viceroyalty Of Peru"
  PRU_communism:0 "Revolutionary Peru"
  PRU_communism_DEF:0 "Revolutionary Peru"
  PRU_fascism_ADJ:0 "Peruvian"
@@ -675,8 +675,8 @@
  SAF_fascism_DEF:0 "Nationalist South Africa"
  SAF_democratic:0 "South Africa"
  SAF_democratic_DEF:0 "South Africa"
- SAF_neutrality:0 "Unitary South Africa"
- SAF_neutrality_DEF:0 "Unitary South Africa"
+ SAF_neutrality:0 "British South Africa"
+ SAF_neutrality_DEF:0 "British South Africa"
  SAF_communism:0 "Cape Commune"
  SAF_communism_DEF:0 "The Cape Commune"
  SAF_fascism_ADJ:0 "South African"
@@ -919,10 +919,10 @@
  RAJ_neutrality_DEF:0 "India"
  RAJ_communism:0 "Indian People's Republic"
  RAJ_communism_DEF:0 "The Indian People's Republic"
- RAJ_fascism_ADJ:0 "British Indian"
- RAJ_democratic_ADJ:0 "British Indian"
- RAJ_neutrality_ADJ:0 "British Indian"
- RAJ_communism_ADJ:0 "British Indian"
+ RAJ_fascism_ADJ:0 "British East Indian"
+ RAJ_democratic_ADJ:0 "British East Indian"
+ RAJ_neutrality_ADJ:0 "British East Indian"
+ RAJ_communism_ADJ:0 "British East Indian"
  CRO_fascism:0 "Independent State of Croatia"
  CRO_fascism_DEF:0 "The Independent State of Croatia"
  CRO_democratic:0 "Republic of Croatia"
