--- a/localisation/AUS_ideas_l_english.yml
+++ b/localisation/AUS_ideas_l_english.yml
@@ -16,3 +16,5 @@
  aus_multi_cultural_empire_1_desc:0 "Our Empire has many different languages and cultures. Many would rather be independent and few would die for another nation."
 
  aus_franco_austrian_alliance:0 "Franco-Austrian Alliance"
+ 
+ aus_truce:0 "Truce"
