--- a/localisation/TUR_ideas_l_english.yml
+++ b/localisation/TUR_ideas_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
- tur_analphabetism:0 "High Analphabetism"
- tur_analphabetism_desc:0 "The percentage of population able to read is shaming. Analphabetism seriously harms education and science."
+ tur_analphabetism:0 "High Illiteracy"
+ tur_analphabetism_desc:0 "The percentage of population able to read is shaming. Illiteracy seriously harms education and science."
  tur_obsolete_uniforms:0 "Obsolete Uniforms"
  tur_obsolete_uniforms_desc:0 "In this era, having proper and fancy uniforms is vital for high discipline and morale. Lacking of these is a problem to be solved."
  tur_modern_empire:0 "Modern Empire"
