--- a/localisation/technology_l_english.yml
+++ b/localisation/technology_l_english.yml
@@ -1,4 +1,20 @@
 ﻿l_english:
+ train1:0 "Locomotive Prototype"
+ train1_desc:0 ""
+ train2:0 "High-Pressure Steam Locomotive"
+ train2_desc:0 ""
+ train3:0 "Twin Cylinder Rack Locomotive"
+ train3_desc:0 ""
+ train4:0 "Steam Suspension Locomotive"
+ train4_desc:0 ""
+ culture_enlightenment:0 "Enlightenment"
+ culture_enlightenment_desc:0 ""
+ culture_neoclassicism:0 "Neoclassicism"
+ culture_neoclassicism_desc:0 ""
+ culture_nationalism:0 "Nationalism"
+ culture_nationalism_desc:0 ""
+ culture_mass_media:0 "Mass Media"
+ culture_mass_media_desc:0 ""
  infantry_equipment:0 "Flintlock Muskets"
  infantry_equipment_desc:0 " "
  infantry_equipment_short:0 "Flintlocks"
