--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -1,4 +1,25 @@
 ﻿l_english:
+ limbered_transport:0 "Limbered Cannons Carriages"
+ limbered_transport_1:0 "Basic Limbered Cannons Carriages"
+ limbered_transport_2:0 "Improved Limbered Cannons Carriages"
+ demi_cannons:0 "Demi Cannon"
+ demi-cannons_1:0 "Demi Cannon"
+ carronades:0 "Carronades"
+ howitzer_equipment:0 "Howitzer"
+ howitzer_equipment_desc:0 ""
+ howitzer_equipment_1:0 "Basic Howitzer"
+ howitzer_equipment_2:0 "Improved Howitzer"
+ howitzer_equipment_3:0 "Cannon Obusier"
+ mortar_equipment:0 "Mortar"
+ mortar_equipment_desc:0 ""
+ mortar_equipment_1:0 "Coehorn Mortar"
+ artillery_equipment_4pdrs:0 "4pdrs Artillery"
+ artillery_equipment_9pdrs:0 "9pdrs Artillery"
+ artillery_equipment_12pdrs:0 "12pdrs Artillery"
+ artillery_equipment_18pdrs:0 "18pdrs Artillery"
+ artillery_equipment_24pdrs:0 "24pdrs Artillery"
+ artillery_equipment_64pdrs:0 "64pdrs Artillery"
+ 
  submarine:0 "Submarine"
  submarine_desc:0 "Submarines employ stealth and powerful torpedoes to destroy enemy convoys."
  both_cruisers_desc:0 "Light Cruiser - A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships.\n\nHeavy Crusier - A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
@@ -1902,114 +1923,7 @@
  artillery_equipment_desc:0 "Artillery refers to large-caliber weapons, such as cannons and howitzers that are operated by crews, which can project munitions far beyond the effective range of personal weapons."
 
  #artillery
- FRA_artillery_equipment_1:0 "Canon de 75 modèle 1897"
- FRA_artillery_equipment_1_short:0 "Canon de 75 modèle 1897"
- FRA_artillery_equipment_2:0 "Canon de 105 L mle 1936"
- FRA_artillery_equipment_3:0 "Canon de 155mm GPF"
-
- CZE_artillery_equipment_1:0 "8 cm kanon vz. 30"
- CZE_artillery_equipment_1_short:0 "8 cm kanon vz. 30"
- CZE_artillery_equipment_2:0 "10.5 cm hruby kanon vz. 35"
- CZE_artillery_equipment_3:0 "15 cm hrubá houfnice vzor 37"
-
- GER_artillery_equipment_1:0 "10.5 cm Leichte Feldhaubitze 18"
- GER_artillery_equipment_1_short:0 "10.5 cm LeFH 18"
- GER_artillery_equipment_2:0 "15 cm sFH 18"
- GER_artillery_equipment_3:0 "15 cm Kanone 18"
-
- ENG_artillery_equipment_1:0 "QF 18-pounder"
- ENG_artillery_equipment_1_short:0 "QF 18-pounder"
- ENG_artillery_equipment_2:0 "QF 25-pounder"
- ENG_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- RAJ_artillery_equipment_1:0 "QF 18-pounder"
- RAJ_artillery_equipment_1_short:0 "QF 18-pounder"
- RAJ_artillery_equipment_2:0 "QF 25-pounder"
- RAJ_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- CAN_artillery_equipment_1:0 "QF 18-pounder"
- CAN_artillery_equipment_1_short:0 "QF 18-pounder"
- CAN_artillery_equipment_2:0 "QF 25-pounder"
- CAN_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- AST_artillery_equipment_1:0 "QF 18-pounder"
- AST_artillery_equipment_1_short:0 "QF 18-pounder"
- AST_artillery_equipment_2:0 "QF 25-pounder"
- AST_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- NZL_artillery_equipment_1:0 "QF 18-pounder"
- NZL_artillery_equipment_1_short:0 "QF 18-pounder"
- NZL_artillery_equipment_2:0 "QF 25-pounder"
- NZL_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- SAF_artillery_equipment_1:0 "QF 18-pounder"
- SAF_artillery_equipment_1_short:0 "QF 18-pounder"
- SAF_artillery_equipment_2:0 "QF 25-pounder"
- SAF_artillery_equipment_3:0 "BL 5.5-inch Medium Gun"
-
- USA_artillery_equipment_1:0 "75 mm Gun M1897"
- USA_artillery_equipment_1_short:0 "75 mm Gun M1897"
- USA_artillery_equipment_2:0 "105 mm M101A1"
- USA_artillery_equipment_3:0 "155 mm M114"
-
- SOV_artillery_equipment_1:0 "M1936 76 mm"
- SOV_artillery_equipment_1_short:0 "M1936 76 mm"
- SOV_artillery_equipment_2:0 "M1940 107 mm"
- SOV_artillery_equipment_3:0 "M1943 152 mm"
-
- ITA_artillery_equipment_1:0 "Cannone da 75/27 modello 06"
- ITA_artillery_equipment_1_short:0 "Cannone da 75/27"
- ITA_artillery_equipment_2:0 "Cannone da 149/40 modello 35"
- ITA_artillery_equipment_2_short:0 "Cannone da 149/40 m/35"
- ITA_artillery_equipment_3:0 "Obice da 210/22 modello 35"
-
- JAP_artillery_equipment_1:0 "Type 95 75 mm"
- JAP_artillery_equipment_1_short:0 "Type 95 75 mm"
- JAP_artillery_equipment_2:0 "Type 91 10 cm"
- JAP_artillery_equipment_3:0 "Type 96 15 cm"
-
- NOR_artillery_equipment_1:0 "Kongsberg M.27 75 mm"
- NOR_artillery_equipment_1_short:0 "M.27 75 mm"
- NOR_artillery_equipment_2:0 "12 cm felthaubits/m09"
- NOR_artillery_equipment_3:0 "12 cm felthaubits/m32"
-
- POL_artillery_equipment_1:0 "Armata 75mm wz. 31 St."
- POL_artillery_equipment_1_short:0 "75mm wz. 31"
- POL_artillery_equipment_2:0 "Haubica 100mm wz. 38 St."
- POL_artillery_equipment_3:0 "Armata 155mm wz. 40"
-
- SWE_artillery_equipment_1:0 "10,5 cm kanon m/34"
- SWE_artillery_equipment_1_short:0 "10.5 cm m/34"
- SWE_artillery_equipment_2:0 "10,5 cm Haubits m/40"
- SWE_artillery_equipment_3:0 "12 cm Haubits m/14"
-
- AUS_artillery_equipment_1:0 "7,5 cm Gebirgskanone M. 15"
- AUS_artillery_equipment_1_short:0 "7,5 cm M. 15"
- AUS_artillery_equipment_2:0 "15 cm schwere Feldhaubitze M. 15"
- AUS_artillery_equipment_3:0 "15 cm Autokanone M. 15/16"
-
- HOL_artillery_equipment_1:0 "7,5 cm Siderius Model 02/04"
- HOL_artillery_equipment_1_short:0 "7,5 cm M 02/04"
- HOL_artillery_equipment_2:0 "10,5 cm 10-veld"
- HOL_artillery_equipment_3:0 "12 cm 12 lang 14"
-
- BEL_artillery_equipment_1:0 "Canon de 75 mle TR"
- BEL_artillery_equipment_1_short:0 "Canon de 75"
- BEL_artillery_equipment_2:0 "Canon de 75 mle GP III"
- BEL_artillery_equipment_3:0 "Canon de 120mm L mle 1931"
-
- ROM_artillery_equipment_1:0 "105mm Schneider M1913"
- ROM_artillery_equipment_1_short:0 "105mm Schneider 13"
- ROM_artillery_equipment_2:0 "150mm Skoda M1934"
- ROM_artillery_equipment_3:0 "155mm Schneider M1917"
-
- CHI_artillery_equipment_1:0 "75mm Type 10 Gan"
- CHI_artillery_equipment_1_short:0 "75mm Type 10"
- CHI_artillery_equipment_2:0 "105mm Type 16 Jin"
- CHI_artillery_equipment_3:0 "150mm Type 14/19"
-
- HUN_artillery_equipment_1:0 "1905 ös mintáju 8 cm"
- HUN_artillery_equipment_1_short:0 "8 cm M1905"
+ 
 
  rocket_artillery_equipment:0 "Towed Rocket Artillery"
  rocket_artillery_equipment_short:0 "Rocket Artillery"
@@ -2272,10 +2186,10 @@
  guided_missile_equipment_3:0 "Advanced Guided Missile"
  guided_missile_equipment_3_short:0 "Guided Missile III"
  guided_missile_equipment_3_desc:0 "Best unmanned flying bomb"
- artillery_equipment_2:0 "Improved Artillery"
- artillery_equipment_2_desc:0 "New howitzer designs, taking advantage of new hydraulic recoil devices and longer barrels."
- artillery_equipment_3:0 "Advanced Artillery"
- artillery_equipment_3_desc:0 "Light-weight artillery capable of being broken down for transport, making it possible to bring artillery support to areas previously difficult to reach."
+ artillery_equipment_2:0 "Advanced Field Guns"
+ artillery_equipment_2_desc:0 ""
+ artillery_equipment_3:0 "Heavy Cannons"
+ artillery_equipment_3_desc:0 ""
  anti_air_equipment_2:0 "Improved Anti-Air"
  anti_air_equipment_2_desc:0 "Anti-air guns with longer cartridges and barrels, able to target high-flying aircraft."
  anti_air_equipment_3:0 "Advanced Anti-Air"
