--- a/localisation/research_l_english.yml
+++ b/localisation/research_l_english.yml
@@ -1,4 +1,10 @@
 ﻿l_english:
+ limbered_transport_1_desc:0 ""
+ limbered_transport_2_desc:0 ""
+ limbered_howitzer:0 "Limbered Howitzers"
+ limbered_howitzer_desc:0 " "
+ improved_howitzer:0 "Improved Howitzer"
+ improved_howitzer_desc:0 " "
  RESEARCH_BONUSES_TOOLTIP:0 "Limited technology bonuses we have:"
  RESEARCH_BONUSES_EMPTY_TOOLTIP:0 "Limited technology bonuses will be listed here."
  RESEARCH_BONUS_SPEED_DESC:0 "§Y$COUNT$x§! $VALUE|G%0$ research speed $NAME$"
