--- a/localisation/technology_l_english.yml
+++ b/localisation/technology_l_english.yml
@@ -1,4 +1,10 @@
 ﻿l_english:
+ tech_skirmishers:0 "Skirmishers I"
+ tech_skirmishers_desc:0 ""
+ tech_skirmishers2:0 "Skirmishers II"
+ tech_skirmishers2_desc:0 ""
+ tech_skirmishers3:0 "Skirmishers III"
+ tech_skirmishers3_desc:0 ""
  train1:0 "Locomotive Prototype"
  train1_desc:0 ""
  train2:0 "High-Pressure Steam Locomotive"
@@ -52,7 +58,7 @@
  supply_lines:0 "Basic Supply Lines"
  supply_lines_desc:0 " "
  supply_lines2:0 "Advanced Supply Lines"
- supply_lines_desc:0 " "
+ supply_lines2_desc:0 " "
  winter_equipment:0 "Winter Equipment"
  winter_equipment_desc:0 " "
  winter_equipment2:0 "Advanced Winter Equipment"
@@ -67,7 +73,7 @@
  rifle_desc:0 " "
  rifle_short:0 "Rifle"
  infantry_rifle_0:0 "Rifled Musket"
- infantry_rifle_desc:0 " "
+ infantry_rifle_0_desc:0 " "
  infantry_rifle_0_short:0 "Rifled Musket"
  infantry_rifle_1:0 "Percussion Rifle"
  infantry_rifle_1_desc:0 " "
