--- a/localisation/technology_l_english.yml
+++ b/localisation/technology_l_english.yml
@@ -34,7 +34,7 @@
  infantry_equipment_2:0 "Percussion Capped Musket"
  infantry_equipment_2_desc:0 " "
  infantry_equipment_2_short:0 "Percussion Muskets"
- infantry_light:0 "Irregulars"
+ infantry_light:0 "Organized Peasantry"
  infantry_light_desc:0 " "
  infantry_light1:0 "Light Infantry"
  infantry_light1_desc:0 " "
