--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -1,4 +1,35 @@
 ﻿l_english:
+ light_cavalry_equipment:0 "Light Cavalry Equipment"
+ light_cavalry_equipment_desc:0 ""
+ early_cavalry_equipment:0 "Early Cavalry"
+ early_cavalry_equipment_desc:0 ""
+ basic_lancer_equipment:0 "Early Lancer"
+ basic_lancer_equipment_desc:0 ""
+ regular_lancer_equipment:0 "Lancer"
+ regular_lancer_equipment_desc:0 ""
+ advanced_lancer_equipment:0 "Elite Lancer"
+ advanced_lancer_equipment_desc:0 ""
+ light_guards_equipment:0 "Light Horse Guard"
+ light_guards_equipment_desc:0 ""
+ medium_cavalry_equipment:0 "Medium Cavalry Equipment"
+ medium_cavalry_equipment_desc:0 ""
+ basic_dragoon_equipment:0 "Early Dragoon"
+ basic_dragoon_equipment_desc:0 ""
+ regular_dragoon_equipment:0 "Dragoon"
+ regular_dragoon_equipment_desc:0 ""
+ advanced_dragoon_equipment:0 "Elite Dragoon"
+ advanced_dragoon_equipment_desc:0 ""
+ heavy_cavalry_equipment:0 "Heavy Cavalry Equipment"
+ heavy_cavalry_equipment_desc:0 ""
+ basic_cuirassier_equipment:0 "Early Cuirassier"
+ basic_cuirassier_equipment_desc:0 ""
+ regular_cuirassier_equipment:0 "Cuirassier"
+ regular_cuirassier_equipment_desc:0 ""
+ advanced_cuirassier_equipment:0 "Elite Cuirassier"
+ advanced_cuirassier_equipment_desc:0 ""
+ horse_grenadiers_equipment:0 "Horse Grenadier Guard"
+ horse_grenadiers_equipment_desc:0 ""
+
  limbered_transport:0 "Limbered Cannons Carriages"
  limbered_transport_desc:0 ""
  limbered_transport_1:0 "Basic Limbered Cannons Carriages"
