--- a/localisation/technology_l_english.yml
+++ b/localisation/technology_l_english.yml
@@ -173,7 +173,7 @@
  horse_skirmishers_desc:0 " "
  carabiniers:0 "Carabiniers"
  carabiniers_desc:0 " "
- horse_grenadiers:0 "Grenadiers of Horse"
+ horse_grenadiers:0 "Horse Grenadier Guard"
  horse_grenadiers_desc:0 " "
  artillery_equipment_64pdrs:0 "64 Pounder Cannon"
  artillery_equipment_64pdrs_desc:0 " "
