--- a/localisation/research_l_english.yml
+++ b/localisation/research_l_english.yml
@@ -64,9 +64,9 @@
  land_doctrine_folder:0 "Land doctrine"
  land_doctrine_folder_desc:0 "Land doctrine, the ways in which your ground forces fight."
  naval_folder:0 "Naval"
- naval_folder_desc:0 "Ships and submarines."
+ naval_folder_desc:0 "Ships."
  mtgnavalfolder:0 "Naval"
- mtgnavalfolder_desc:0 "Ships and submarines. Research new modules to customize your ships."
+ mtgnavalfolder_desc:0 "Ships. Research new modules to customize your ships."
  naval_doctrine_folder:0 "Naval doctrine"
  naval_doctrine_folder_desc:0 "Naval doctrine, how your Navy fights."
  air_techs_folder:0 "Air"
